--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
+title: ESP-01 Qwiic Development Board
+description: An ESP-01 Development Board with power, programming and Qwiic headers
+encoding: UTF-8
 theme: jekyll-theme-cayman
